# NitroTPM-Tools

./: CHANGELOG.md
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_LICENSES_RUST_CRATES.html
docker/: builder.Dockerfile
nitro-tpm-attest/: Cargo.toml  README.md  build.rs
nitro-tpm-attest/src/: lib.rs
nitro-tpm-attest/src/tss/: endorsement_key.rs  mod.rs
nitro-tpm-pcr-compute/: Cargo.toml  README.md
nitro-tpm-pcr-compute/src/: build_info.rs  main.rs  pcr.rs
