[package]
name = "nitro-tpm-attest"
version = "1.0.2"
description = "Retrieve a signed attestation document from the NitroTPM"
edition = "2024"
authors = ["Marius Knaust <mknaust@amazon.com>"]
repository = "https://github.com/aws/NitroTPM-Tools"
readme = "README.md"
license-file = "../LICENSE"
keywords = ["aws", "nitro", "nitrotpm", "attestation", "tpm"]

[dependencies]
anyhow = "1.0"
aws-lc-rs = "1.16"
aws-nitro-enclaves-nsm-api = "0.5"
ciborium = "0.2"
clap = { version = "4.6", features = ["derive"] }
picky-asn1-der = "0.5"
picky-asn1-x509 = "0.15"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
tss-esapi = "7.7"
tss-esapi-sys = "0.6"

[build-dependencies]
semver = "1.0"

[dev-dependencies]
aws-config = "1.8"
aws-sdk-kms = "1.105"
base64ct = { version = "1.8", features = ["alloc"] }
openssl = "0.10"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "nitro-tpm-kms-decrypt"
path = "examples/kms_decrypt.rs"
